--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand nav-link" routerLink="" href=""><strong>Jonathan Dipita</strong></a>
+    </div>
+  </nav>
   <app-root></app-root>
 </body>
 </html>
